--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -7,7 +7,7 @@
 <ion-content padding>
   <h2>Benvenuti!</h2>
   <p>
-    In futuro utilizzerò questa pagina per progettare cose su stackblitz.
+    In futuro utilizzerò questa pagina per progettare cose su stackblitz. Qualcosa di diverso.
   </p>
   <p>
     Take a look at the <code>pages/</code> directory to add or change tabs,
